--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
   <!-- Add your site or application content here -->
   <p>Hello world! This is HTML5 Boilerplate.</p>
+  <p><a href="projects/index.html">Projects</a></p>
+  <p><a href="assignments/index.html">Assignments</a></p>
+
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
