--- a/index.html
+++ b/index.html
@@ -30,25 +30,30 @@
   <main>
 
     <section class="intro-block">
-      <h1>CORE 1 INTERACTION D FA20</h1>
-      <h3>Mike Bowser</h3>
+      <h1>Mike Bowser</h1>
       <p class="location">North Bergen, NJ</p>
+      <h3>CORE 1 INTERACTION D FA20</h3>
+
       <figure>
         <img src="img/IMG_3291.jpg" alt="Scary monster" style="width:100%">
-        <figcaption>Scary monster</figcaption>
+        <figcaption>Friendly monster</figcaption>
       </figure> 
     </section>
   
   
       <section>
-<P>I've been designing digital products and experiences and building brands for more than 15 years. Throughout my career I've learned that people, and how we communicate with each other, make all the difference in experience and product design.</P>
-
-<P>I'm currently the global director of brand and design for The Associated Press. Naturally, my portfolio contains many projects from the AP but I've also worked with The Economist, BabyBjörn, Seamless, St. Regis, Tribeca Film Festival, AMEX, Comcast, FedEx, Panasonic, HP, Sprint, Wyndham Hotels & Resorts, among others. I've led agency design teams and in-house teams.</P>
+<P>I've been designing digital products and experiences and building brands for more than 15 years. Throughout my career I've learned that people, and how we communicate with each other, make all the difference in experience and product design. I'm currently the global director of brand and design for The Associated Press.</P>
 
 <P>I help organizations apply design and creative thinking to discover new opportunities for revenue and make more meaningful connections with customers through better experiences. I do that by empowering design teams to be collaborative, entrepreneurial, flexible in their approach and always focused on quality execution that aligns with the organization’s mission and principles. I'm also an actively hands-on designer; I like to do the work.</P>
   </section>
   <section>
-    <ul><li>fff</li></ul>
+    <h3>Projects / assignments</h3>
+    <ul>
+      <li><a href="">Link to assignment or project</a></li>
+      <li><a href="">Link to assignment or project</a></li>
+      <li><a href="">Link to assignment or project</a></li>
+
+    </ul>
   </section>
   
       
