--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <section class="projects">
     <h3>Projects / assignments</h3>
     <ul>
-      <li><a href="">Link to assignment or project</a></li>
+      <li><a href="projects/type-variations/index.html">Type variations</a></li>
       <li><a href="">Link to assignment or project</a></li>
       <li><a href="">Link to assignment or project</a></li>
 
