--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   
   
       <section class="statement">
-<P>I've been designing digital products and experiences and building brands for more than 15 years. Throughout my career I've learned that people, and how we communicate with each other, make all the difference in experience and product design. I'm currently the global director of brand and design for The Associated Press.</P>
+<P>Hello. I've been designing digital products and experiences and building brands for more than 15 years. Throughout my career I've learned that people, and how we communicate with each other, make all the difference in experience and product design. I'm currently the global director of brand and design for The Associated Press.</P>
 
 <P>I help organizations apply design and creative thinking to discover new opportunities for revenue and make more meaningful connections with customers through better experiences. I do that by empowering design teams to be collaborative, entrepreneurial, flexible in their approach and always focused on quality execution that aligns with the organization’s mission and principles. I'm also an actively hands-on designer; I like to do the work.</P>
   </section>
